# GuiTestingProject

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: ci.yml
documentation/: Roadmap.md  TODO.md
documentation/DeveloperDocs/GTP-DeveloperDocs/: Graphics Planning.md
documentation/DeveloperDocs/GTP-DeveloperDocs/Source/: Window.md
documentation/DeveloperDocs/GTP-DeveloperDocs/Source/Services/: LogService.md
documentation/Feature Planning/: Localisation.md
src/: main.cpp
src/Core/: ColouredConsole.h  ConsoleColours.h  Program.cpp  Program.h  Services.h  Window.cpp  Window.h
src/Core/Pages/: Pages.txt  UiPanel.cpp  UiPanel.h  WinTile.cpp  WinTile.h
src/Core/Services/: CommandConsole.cpp  CommandConsole.h  FileManager.cpp  FileManager.h  IService.h  LogService.cpp  LogService.h  ObjectManager.h  VulkanHandler.cpp  VulkanHandler.h  WindowManager.cpp  WindowManager.h
src/Core/WindowClasses/: BaseWindow.cpp  BaseWindow.h  ContextWindow.cpp  ContextWindow.h  DedicatedWindow.cpp  DedicatedWindow.h  TestWindow.cpp  TestWindow.h  TiledWindow.cpp  TiledWindow.h  TooltipWindow.cpp  TooltipWindow.h
src/Localisation/: LanguageFileTemplates.txt
